[gd_scene load_steps=19 format=2]

[ext_resource path="res://prototypes/game/Opponent_Step_Zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/graphics/game/hud/score_title.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/game/hud/max_combo_title.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/game/hud/combo_title.png" type="Texture" id=4]
[ext_resource path="res://scripts/game/events/BeatSpatial.gd" type="Script" id=5]
[ext_resource path="res://assets/graphics/game/hud/icons/character_icons.tres" type="SpriteFrames" id=6]
[ext_resource path="res://prototypes/game/Step_Zone.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/graphics/game/hud/combo_number_sheet.tres" type="SpriteFrames" id=8]
[ext_resource path="res://scripts/game/Level.gd" type="Script" id=9]
[ext_resource path="res://assets/graphics/menus/ready.png" type="Texture" id=10]
[ext_resource path="res://assets/graphics/menus/go.png" type="Texture" id=11]
[ext_resource path="res://assets/graphics/menus/set.png" type="Texture" id=12]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 2.5, 0.25, 0.1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 0, 1, 0.156863, 1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.2, 2.45, 0.05 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Beat_Hit"
length = 0.0833333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Health_Bar/Icons:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector3( 1.2, 1.2, 1 ), Vector3( 1, 1, 1 ) ]
}

[node name="Level" type="Spatial"]
pause_mode = 1
script = ExtResource( 9 )

[node name="Player_Step_Zone" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.65, 9.86753e-09, -5.59615e-08, 0, 0.640125, 0.112871, 5.68248e-08, 0.112871, -0.640125, 0, 0.65, -0.25 )

[node name="Opponent_Step_Zone" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.4, 0, 2.11394e-07, 0, 1.4, 0, -2.11394e-07, 0, -1.4, -1.5, 2.5, -3 )

[node name="Countdown_Messages" type="Spatial" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 1, 0, 1.5, -2 )

[node name="Countdown" type="AudioStreamPlayer" parent="Countdown_Messages"]
bus = "SFX"

[node name="Ready" type="Sprite3D" parent="Countdown_Messages"]
opacity = 0.0
texture = ExtResource( 10 )

[node name="Set" type="Sprite3D" parent="Countdown_Messages"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00999999 )
opacity = 0.0
texture = ExtResource( 12 )

[node name="Go" type="Sprite3D" parent="Countdown_Messages"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.02 )
opacity = 0.0
texture = ExtResource( 11 )

[node name="Tween" type="Tween" parent="Countdown_Messages"]

[node name="HUD" type="Spatial" parent="."]
transform = Transform( 0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, 0.85, 1.5, -2.75 )
script = ExtResource( 5 )

[node name="Combo" type="Spatial" parent="HUD"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.15, -0.1 )

[node name="Title" type="Sprite3D" parent="HUD/Combo"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.2, 0, 0, 0 )
cast_shadow = 0
double_sided = false
texture = ExtResource( 4 )

[node name="Hundreds" type="AnimatedSprite3D" parent="HUD/Combo"]
transform = Transform( 0.375, 0, 0, 0, 0.375, 0, 0, 0, 1, -0.4, -0.4, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Tens" type="AnimatedSprite3D" parent="HUD/Combo"]
transform = Transform( 0.375, 0, 0, 0, 0.375, 0, -7.45058e-09, 0, 1, 0, -0.4, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Ones" type="AnimatedSprite3D" parent="HUD/Combo"]
transform = Transform( 0.375, 0, 1.98682e-08, 0, 0.375, 0, -7.45058e-09, 0, 1, 0.4, -0.4, 2.38419e-07 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Tween" type="Tween" parent="HUD/Combo"]

[node name="Max_Combo" type="Spatial" parent="HUD"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.35, -0.1 )

[node name="Title" type="Sprite3D" parent="HUD/Max_Combo"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.2, 0, 0, 0 )
cast_shadow = 0
double_sided = false
texture = ExtResource( 3 )

[node name="Hundreds" type="AnimatedSprite3D" parent="HUD/Max_Combo"]
transform = Transform( 0.375, 0, 0, 0, 0.375, 0, -7.45058e-09, 0, 1, -0.4, -0.4, 2.38419e-07 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Tens" type="AnimatedSprite3D" parent="HUD/Max_Combo"]
transform = Transform( 0.375, 0, 0, 0, 0.375, 0, -7.45058e-09, 0, 1, 0, -0.4, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Ones" type="AnimatedSprite3D" parent="HUD/Max_Combo"]
transform = Transform( 0.375, 0, 0, 0, 0.375, 0, -7.45058e-09, 0, 1, 0.4, -0.4, 2.38419e-07 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Tween" type="Tween" parent="HUD/Max_Combo"]

[node name="Score" type="Spatial" parent="HUD"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.45, -0.1 )

[node name="Title" type="Sprite3D" parent="HUD/Score"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.2, 0, 0, 0 )
cast_shadow = 0
double_sided = false
texture = ExtResource( 2 )

[node name="Hundred_Thousands" type="AnimatedSprite3D" parent="HUD/Score"]
transform = Transform( 0.3, 0, -2.98023e-08, 0, 0.3, 0, -7.45058e-09, 0, 1, -0.43, -0.35, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Ten_Thousands" type="AnimatedSprite3D" parent="HUD/Score"]
transform = Transform( 0.3, 0, 1.98682e-08, 0, 0.3, 0, -5.96047e-09, 0, 1, -0.1, -0.35, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Thousands" type="AnimatedSprite3D" parent="HUD/Score"]
transform = Transform( 0.3, 0, 1.98682e-08, 0, 0.3, 0, -5.96047e-09, 0, 1, 0.23, -0.35, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Hundreds" type="AnimatedSprite3D" parent="HUD/Score"]
transform = Transform( 0.3, 0, -2.98023e-08, 0, 0.3, 0, -7.45058e-09, 0, 1, -0.23, -0.73, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Tens" type="AnimatedSprite3D" parent="HUD/Score"]
transform = Transform( 0.3, 0, 1.98682e-08, 0, 0.3, 0, -5.96047e-09, 0, 1, 0.1, -0.73, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Ones" type="AnimatedSprite3D" parent="HUD/Score"]
transform = Transform( 0.3, 0, 1.98682e-08, 0, 0.3, 0, -5.96047e-09, 0, 1, 0.43, -0.73, 0 )
cast_shadow = 0
opacity = 0.25
double_sided = false
frames = ExtResource( 8 )

[node name="Tween" type="Tween" parent="HUD/Score"]

[node name="Health_Bar" type="MeshInstance" parent="HUD"]
transform = Transform( 0.939693, 0.0885213, 0.330366, 0, 0.965926, -0.258819, -0.34202, 0.24321, 0.907673, -0.845595, 1.75, 0.161979 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Player_Bar" type="Spatial" parent="HUD/Health_Bar"]
transform = Transform( -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0, 0, 1, 1.225, 0, 0 )

[node name="Mesh" type="MeshInstance" parent="HUD/Health_Bar/Player_Bar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.225, 0.075 )
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="Opponent_Bar" type="Spatial" parent="HUD/Health_Bar"]
transform = Transform( -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0, 0, 1, -1.225, 0, 0 )

[node name="Mesh" type="MeshInstance" parent="HUD/Health_Bar/Opponent_Bar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.225, 0.075 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="Icons" type="Spatial" parent="HUD/Health_Bar"]
transform = Transform( 1, -1.57773e-28, 1.49012e-07, 0, 1, 1.05879e-21, -1.49012e-07, -1.05879e-21, 1, -5.68434e-14, 0, 0.11 )

[node name="Player_Icon" type="AnimatedSprite3D" parent="HUD/Health_Bar/Icons"]
transform = Transform( 0.5, 0, 2.98023e-08, 0, 0.5, 0, -1.49012e-08, 0, 1, 0.3, 0, 0 )
cast_shadow = 0
flip_h = true
double_sided = false
frames = ExtResource( 6 )
frame = 2

[node name="Opponent_Icon" type="AnimatedSprite3D" parent="HUD/Health_Bar/Icons"]
transform = Transform( 0.5, 0, -8.94074e-08, 0, 0.5, 0, 4.47037e-08, 0, 1, -0.3, 0, 0 )
cast_shadow = 0
double_sided = false
frames = ExtResource( 6 )
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
anims/Beat_Hit = SubResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.921575, 0.198964 )
fov = 90.0
